// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormField > renders with as correctly 1`] = `
"<section class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</section>"
`;

exports[`FormField > renders with b24ui correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with class correctly 1`] = `
"<div class="font-regular text-sm relative">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with default slot correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">Default slot
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with description slot correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-1.5">
    <!--v-if-->
    <p id="v-0-0-description" class="mt-0.5 leading-tight text-base-500 dark:text-base-600">Description slot</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with error correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-error" class="mt-1 text-red-500 dark:text-red-600">
      <div class="flex flex-row flex-nowrap gap-0.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-lg size-md2">
          <path fill="currentColor" fill-rule="evenodd" d="m20.016 15.912-6.88-11.457c-.53-.88-1.792-.88-2.311 0l-6.88 11.457c-.54.902.113 2.041 1.162 2.041h13.758a1.347 1.347 0 0 0 1.15-2.04m-9.022-7.465a.91.91 0 0 1 .913-.914h.124a.91.91 0 0 1 .914.914v3.417a.91.91 0 0 1-.914.913h-.124a.91.91 0 0 1-.913-.913zm2.131 6.63c0 .632-.518 1.151-1.15 1.151s-1.15-.519-1.15-1.15c0-.632.519-1.15 1.15-1.15.632 0 1.15.518 1.15 1.15" clip-rule="evenodd"></path>
        </svg>
        <div>Username is already taken</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`FormField > renders with error slot correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-error" class="mt-1 text-red-500 dark:text-red-600">Error slot</div>
  </div>
</div>"
`;

exports[`FormField > renders with help correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <p class="mt-1.5 leading-tight italic text-base-500 dark:text-base-600">Username must be unique</p>
  </div>
</div>"
`;

exports[`FormField > renders with help slot correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <p class="mt-1.5 leading-tight italic text-base-500 dark:text-base-600">Help slot</p>
  </div>
</div>"
`;

exports[`FormField > renders with hint correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with hint slot correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with label and description correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-1.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="mt-0.5 leading-tight text-base-500 dark:text-base-600">Enter your username</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with label slot correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400">Label slot</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with required correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-2.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600">Username</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size lg correctly 1`] = `
"<div class="font-regular text-md">
  <div class="leading-none mb-1.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="mt-0.5 leading-tight text-base-500 dark:text-base-600">Enter your username</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size md correctly 1`] = `
"<div class="font-regular text-sm">
  <div class="leading-none mb-1.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="mt-0.5 leading-tight text-base-500 dark:text-base-600">Enter your username</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size sm correctly 1`] = `
"<div class="font-regular text-xs">
  <div class="leading-none mb-1.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="mt-0.5 leading-tight text-base-500 dark:text-base-600">Enter your username</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size xs correctly 1`] = `
"<div class="font-regular text-xs">
  <div class="leading-none mb-1.5">
    <div class="flex content-center items-center justify-between"><label for="v-0-0" class="block text-base-900 dark:text-base-400">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="mt-0.5 leading-tight text-base-500 dark:text-base-600">Enter your username</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;
